third_party/move/move-compiler-v2/tests/uninit-use-checker/v1-commands/move_before_assign.exp

Diagnostics:
warning: Unused local variable `y`. Consider removing or prefixing with an underscore: `_y`
  ┌─ tests/uninit-use-checker/v1-commands/move_before_assign.move:4:9
  │
4 │     let y = move x;
  │         ^

============ initial bytecode ================

[variant baseline]
fun <SELF>_0::main() {
     var $t0: u64
     var $t1: u64
     var $t2: u64
  0: $t2 := move($t0)
  1: $t1 := infer($t2)
  2: return ()
}


Diagnostics:
error: use of unassigned local `x`
  ┌─ tests/uninit-use-checker/v1-commands/move_before_assign.move:4:13
  │
4 │     let y = move x;
  │             ^^^^^^

============ after uninitialized_use_checker: ================

[variant baseline]
fun <SELF>_0::main() {
     var $t0: u64
     var $t1: u64
     var $t2: u64
     # before: { no: $t0, $t1, $t2 }, after: { no: $t0, $t1 }
  0: $t2 := move($t0)
     # before: { no: $t0, $t1 }, after: { no: $t0 }
  1: $t1 := infer($t2)
     # before: { no: $t0 }, after: { no: $t0 }
  2: return ()
}
